# tlcrt

./: BUILD.md  CMakeLists.txt  README.md  TEST.md
include/tlc/: ast.h  rt.h
lib/: rt.cpp  value.cpp
src/: main.cpp  test.cpp
